--- a/.travis.yml
+++ b/.travis.yml
@@ -68,23 +68,30 @@ env:
 
 # Install system dependencies, namely a very barebones ROS setup.
 before_install:
-  - sudo sh -c "echo \"deb http://packages.ros.org/ros/ubuntu $ROS_CI_DESKTOP main\" > /etc/apt/sources.list.d/ros-latest.list"
+  # Setup sources.list
+  - sudo sh -c 'echo "deb http://packages.ros.org/ros/ubuntu $(lsb_release -sc) main" > /etc/apt/sources.list.d/ros-latest.list'
+  # Setup keys
   - sudo apt-key adv --keyserver hkp://ha.pool.sks-keyservers.net:80 --recv-key 421C365BD9FF1F717815A3895523BAEEB01FA116
-  - sudo apt-get update -qq
-  - sudo apt-get install -y python-catkin-pkg python-rosdep python-wstool ros-$ROS_DISTRO-catkin
-  - source /opt/ros/$ROS_DISTRO/setup.bash
+  # Update APT
+  - sudo apt update -qq
+  # Install ROS
+  - sudo apt install -y -qq ros-kinetic-desktop-full
+  # Install dependencies for building
+  - sudo apt install -y -qq python-rosinstall python-rosinstall-generator python-wstool build-essential
   # Prepare rosdep to install dependencies.
   - sudo rosdep init
   - rosdep update
+  # Environment setup
+  - source /opt/ros/kinetic/setup.bash
 
 # Create a catkin workspace with the package under integration.
 install:
-  - mkdir -p ~/catkin_ws/src
-  - cd ~/catkin_ws/src
+  - mkdir -p ~/sara_ws/src
+  - cd ~/sara_ws/src
   - catkin_init_workspace
   # Create the devel/setup.bash (run catkin_make with an empty workspace) and
   # source it to set the path variables.
-  - cd ~/catkin_ws
+  - cd ~/sara_ws
   - catkin_make
   - source devel/setup.bash
   # Add the package under integration to the workspace using a symlink.
@@ -95,13 +102,13 @@ install:
 # wstool looks for a ROSINSTALL_FILE defined in the environment variables.
 before_script:
   # source dependencies: install using wstool.
-  - cd ~/catkin_ws/src
-  - wstool init
-  - if [[ -f $ROSINSTALL_FILE ]] ; then wstool merge $ROSINSTALL_FILE ; fi
-  - wstool up
-  # package depdencies: install using rosdep.
-  - cd ~/catkin_ws
-  - rosdep install -y --from-paths src --ignore-src --rosdistro $ROS_DISTRO
+  # - cd ~/catkin_ws/src
+  # - wstool init
+  # - if [[ -f $ROSINSTALL_FILE ]] ; then wstool merge $ROSINSTALL_FILE ; fi
+  # - wstool up
+  # # package depdencies: install using rosdep.
+  # - cd ~/catkin_ws
+  # - rosdep install -y --from-paths src --ignore-src --rosdistro $ROS_DISTRO
 
 # Compile and test (mark the build as failed if any step fails). If the
 # CATKIN_OPTIONS file exists, use it as an argument to catkin_make, for example
@@ -112,9 +119,9 @@ before_script:
 # fails. Running `catkin_test_results` aggregates all the results and returns
 # non-zero when a test fails (which notifies Travis the build failed).
 script:
-  - source /opt/ros/$ROS_DISTRO/setup.bash
-  - cd ~/catkin_ws
-  - catkin_make $( [ -f $CATKIN_OPTIONS ] && cat $CATKIN_OPTIONS )
-  # Run the tests, ensuring the path is set correctly.
-  - source devel/setup.bash
-  - catkin_make run_tests && catkin_test_results
+  # - source /opt/ros/$ROS_DISTRO/setup.bash
+  # - cd ~/catkin_ws
+  # - catkin_make $( [ -f $CATKIN_OPTIONS ] && cat $CATKIN_OPTIONS )
+  # # Run the tests, ensuring the path is set correctly.
+  # - source devel/setup.bash
+  # - catkin_make run_tests && catkin_test_results
