--- a/.travis.yml
+++ b/.travis.yml
@@ -64,11 +64,11 @@ before_install:
   # Setup keys
   - sudo apt-key adv --keyserver hkp://ha.pool.sks-keyservers.net:80 --recv-key 421C365BD9FF1F717815A3895523BAEEB01FA116
   # Update APT
-  - sudo apt update
+  - sudo apt-get update
   # Install ROS
-  - sudo apt install -y ros-kinetic-desktop-full
+  - sudo apt-get install -y ros-kinetic-desktop-full
   # Install dependencies for building
-  - sudo apt install -y python-rosinstall python-rosinstall-generator python-wstool build-essential
+  - sudo apt-get install -y python-rosinstall python-rosinstall-generator python-wstool build-essential
   # Prepare rosdep to install dependencies.
   - sudo rosdep init
   - rosdep update
