--- a/.travis.yml
+++ b/.travis.yml
@@ -50,15 +50,11 @@ language:
 cache:
   - apt
 
-# Configuration variables. All variables are global now, but this can be used to
-# trigger a build matrix for different ROS distributions if desired.
-env:
-  global:
-
 ################################################################################
 
 # Install system dependencies, namely a very barebones ROS setup.
 before_install:
+  - lsb_release -a
   # Setup sources.list
   - sudo sh -c 'echo "deb http://packages.ros.org/ros/ubuntu $(lsb_release -sc) main" > /etc/apt/sources.list.d/ros-latest.list'
   # Setup keys
